# backend/swagger.yaml
@@ -39,6 +39,8 @@ tags:
   description: "Endpoint Road"
 - name: "bill"
   description: "Endpoint Bill"
+- name: "product-shipment"
+  description: "Endpoint Product Shipment"
 - name: "participant"
   description: "Endpoint Participant"
 - name: "quote"
@@ -1559,6 +1561,9 @@ paths:
             }
         400:
           description: car in not found.
+      security:
+        - bearerAuth: []
+  
   /admin/car/{carId}:
     get:
       tags:
@@ -1585,47 +1590,8 @@ paths:
             }
         400:
           description: CarId is not found.
-
-  /admin/car/create:
-    post:
-      tags:
-        - "car"
-      summary: "Create a new car"
-      consumes:
-        - application/json
-      parameters:
-        - in: body
-          name: car
-          description: a new car.
-          schema:
-            type: object
-            properties:
-              plate:
-                type: string 
-              car_type:
-                type: string
-                enum: ['8_ton', '20_ton']
-              volumn:
-                type: number 
-              tonnage:
-                type: number 
-      responses:
-        200:
-          description: Create car successfully.
-          schema:
-            type: object
-            example: {
-                "plate": "string",
-                "car_type": "string",
-                "volumn": "string",
-                "tonnage": "string",
-            }
-        400:
-          description: Create car failed.
       security:
         - bearerAuth: []
-  
-  /admin/car/edit/{carId}:
     put:
       tags:
         - "car"
@@ -1674,7 +1640,6 @@ paths:
           description: road cannot be found.
       security:
         - bearerAuth: []
-  /admin/car/delete/{carId}:
     delete:
       tags:
         - "car"
@@ -1700,6 +1665,45 @@ paths:
                     description: Success message
         400:
           description: Delete car failed.
+      security:
+        - bearerAuth: []
+
+  /admin/car/create:
+    post:
+      tags:
+        - "car"
+      summary: "Create a new car"
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: car
+          description: a new car.
+          schema:
+            type: object
+            properties:
+              plate:
+                type: string 
+              car_type:
+                type: string
+                enum: ['8_ton', '20_ton']
+              volumn:
+                type: number 
+              tonnage:
+                type: number 
+      responses:
+        200:
+          description: Create car successfully.
+          schema:
+            type: object
+            example: {
+                "plate": "string",
+                "car_type": "string",
+                "volumn": "string",
+                "tonnage": "string",
+            }
+        400:
+          description: Create car failed.
       security:
         - bearerAuth: []
 
@@ -1948,6 +1952,8 @@ paths:
             }
         400:
           description: road in not found.
+      security:
+        - bearerAuth: []
 
   /admin/road/{roadId}:
     get:
@@ -1974,6 +1980,73 @@ paths:
             }
         400:
           description: RoadId is not found. 
+      security:
+        - bearerAuth: []
+    put:
+      tags:
+        - "road"
+      summary: Admin update road 
+      consumes:
+        - application/json
+      parameters:
+        - in: path
+          name: roadId
+          type: string
+          required: true
+          description: Id of an road 
+        - in: body
+          name: road
+          description: a new road.
+          schema:
+            type: object
+            properties:
+              distance: 
+                  type: number
+              origin:
+                  type: string
+              destination: 
+                  type: string
+      responses:
+        200:
+          description: Update road  successfully.
+          schema:
+            type: object
+            example: {
+              "distance": "string",
+              "origin": "string",
+              "destination": "string",
+            }
+        400:
+          description: road cannot be found.
+      security:
+        - bearerAuth: []
+    delete:
+      tags:
+        - "road"
+      summary: "Delete an existing road"
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: roadId
+          type: string
+          required: true
+          description: Id of an road 
+      responses:
+        200:
+          description: Delete road successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Success message
+        400:
+          description: Delete road failed.
+      security:
+          - bearerAuth: []
 
   /admin/road/create:
     post:
@@ -2014,62 +2087,131 @@ paths:
       security:
         - bearerAuth: []
 
-  /admin/road/edit/{roadId}:
-    put:
+  /admin/product-shipment:
+    get:
       tags:
-        - "road"
-      summary: Admin update road 
-      consumes:
+        - "product-shipment"
+      summary: get product-shipment
+      produces:
         - application/json
       parameters:
-        - in: path
-          name: roadId
+        - in: query
+          name: pageSize
           type: string
-          required: true
-          description: Id of an road 
-        - in: body
-          name: road
-          description: a new road.
-          schema:
-            type: object
-            properties:
-              distance: 
-                  type: number
-              origin:
-                  type: string
-              destination: 
-                  type: string
+          description: limit number of bill on a page
+        - in: query
+          name: page
+          type: string
+          description: num of page
+        - in: query
+          name: keyword
+          type: string
+          description: keyword
+        - in: query
+          name: sortBy
+          type: string
+          description: sort by
+        - in: query
+          name: keyword
+          type: string
+          description: search by keyword
+        - in: query
+          name: product_id
+          type: string
+          description:  product_id
       responses:
         200:
-          description: Update road  successfully.
+          description: get product shipment successfully.
           schema:
             type: object
             example: {
-              "distance": "string",
-              "origin": "string",
-              "destination": "string",
+              "quantity": "string",
+              "product_id": "string",
             }
         400:
-          description: road cannot be found.
+          description: product shipment in not found.
       security:
         - bearerAuth: []
 
-  /admin/road/delete/{roadId}:       
-    delete:
+  /admin/product-shipment/{id}:
+    get:
       tags:
-        - "road"
-      summary: "Delete an existing road"
+        - "product-shipment"
+      summary: get product-shipment by id
       produces:
         - application/json
       parameters:
         - in: path
-          name: roadId
+          name: id
           type: string
           required: true
-          description: Id of an road 
+          description: Id of a product-shipment 
       responses:
         200:
-          description: Delete road successfully.
+          description: get product-shipment successfully.
+          schema:
+            type: object
+            example: {
+              "quantity": "string",
+              "product_id": "string",
+            }
+        400:
+          description: product-shipmentID is not found. 
+      security:
+        - bearerAuth: []
+    put:
+      tags:
+        - "product-shipment"
+      summary: Admin update product-shipment 
+      consumes:
+        - application/json
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: Id of an product-shipment 
+        - in: body
+          name: product-shipment
+          description: Update product-shipment.
+          schema:
+            type: object
+            required:
+              - quantity
+              - product_id
+            properties:
+              quantity:
+                type: number 
+              product_id:
+                type: string
+      responses:
+        200:
+          description: Update bill  successfully.
+          schema:
+            type: object
+            example: {
+                "quantity": "string",
+                "product_id": "string",
+            }
+        400:
+          description: product-shipment cannot found.
+      security:
+        - bearerAuth: []
+    delete:
+      tags:
+        - "product-shipment"
+      summary: "Delete an existing product-shipment"
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+          description: Id of an product-shipment 
+      responses:
+        200:
+          description: Delete product-shipment successfully.
           content:
             application/json:
               schema:
@@ -2079,8 +2221,40 @@ paths:
                     type: string
                     description: Success message
         400:
-          description: Delete road failed.
-    security:
+          description: Delete product-shipment failed.
+      security:
+          - bearerAuth: []
+
+  /admin/product-shipment/create:
+    post:
+      tags:
+        - "product-shipment"
+      summary: "Create a new product-shipment"
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: product-shipment
+          description: a new product-shipment.
+          schema:
+            type: object
+            properties:
+              quantity:
+                type: number 
+              product_id:
+                type: string
+      responses:
+        200:
+          description: Create product shipment successfully.
+          schema:
+            type: object
+            example: {
+              "quantity": "string",
+              "product_id": "string",
+            }
+        400:
+          description: Create product shipment failed. 
+      security:
         - bearerAuth: []
 
   /admin/bill:
@@ -2142,6 +2316,8 @@ paths:
             }
         400:
           description: bill in not found.
+      security:
+        - bearerAuth: []
 
   /admin/bill/{billId}:
     get:
@@ -2171,53 +2347,8 @@ paths:
             }
         400:
           description: billId is not found. 
-
-  /admin/bill/create:
-    post:
-      tags:
-        - "bill"
-      summary: "Create a new bill"
-      consumes:
-        - application/json
-      parameters:
-        - in: body
-          name: bill
-          description: a new bill.
-          schema:
-            type: object
-            properties:
-              service:
-                type: string 
-              road:
-                type: string
-              car:
-                type: string 
-              driver:
-                type: string 
-              product_shipment:
-                type: string 
-              status:
-                type: string
-                enum: ['waiting', 'accepted', 'processing', 'completed', 'refused']
-      responses:
-        200:
-          description: Create bill successfully.
-          schema:
-            type: object
-            example: {
-              "service": "string",
-              "road": "string",
-              "car": "string",
-              "driver": "string",
-              "product_shipment": "string",
-              "status": "string",
-            }
-        400:
-          description: Create bill failed. 
       security:
         - bearerAuth: []
-
-  /admin/bill/edit/{billId}:
     put:
       tags:
         - "bill"
@@ -2268,7 +2399,6 @@ paths:
           description: bill cannot be found.
       security:
         - bearerAuth: []
-  /admin/bill/delete/{billId}:       
     delete:
       tags:
         - "bill"
@@ -2294,7 +2424,52 @@ paths:
                     description: Success message
         400:
           description: Delete bill failed.
-    security:
+      security:
+          - bearerAuth: []
+
+  /admin/bill/create:
+    post:
+      tags:
+        - "bill"
+      summary: "Create a new bill"
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: bill
+          description: a new bill.
+          schema:
+            type: object
+            properties:
+              service:
+                type: string 
+              road:
+                type: string
+              car:
+                type: string 
+              driver:
+                type: string 
+              product_shipment:
+                type: string 
+              status:
+                type: string
+                enum: ['waiting', 'accepted', 'processing', 'completed', 'refused']
+      responses:
+        200:
+          description: Create bill successfully.
+          schema:
+            type: object
+            example: {
+              "service": "string",
+              "road": "string",
+              "car": "string",
+              "driver": "string",
+              "product_shipment": "string",
+              "status": "string",
+            }
+        400:
+          description: Create bill failed. 
+      security:
         - bearerAuth: []
 
   /admin/consultancy:
